fix spacing for navbar

--- a/blog-api/src/public/assets/css/main.css
+++ b/blog-api/src/public/assets/css/main.css
@@ -3183,10 +3183,11 @@ input, select, textarea {
 			line-height: inherit;
 			padding: 0 0 0 1.5em;
 			white-space: nowrap;
+			margin-right: 1.5em
 		}
 
 			#header h1 a {
-				font-size: 0.7em;
+				font-size: 0.95em;
 			}
 
 			#header2 h2 {
@@ -3208,9 +3209,10 @@ input, select, textarea {
 			border-left: solid 1px rgba(160, 160, 160, 0.3);
 			height: inherit;
 			line-height: inherit;
-			margin-left: 1.5em;
+			text-align: right;
 			overflow: hidden;
 			padding-left: 1.5em;
+			margin-right: 2em;
 		}
 
 			#header .links ul li {
@@ -3229,7 +3231,7 @@ input, select, textarea {
 				#header .links ul li a {
 					border-bottom: 0;
 					font-family: "Raleway", Helvetica, sans-serif;
-					font-size: 0.7em;
+					font-size: 0.68em;
 					font-weight: 400;
 					letter-spacing: 0.25em;
 					text-transform: uppercase;
